--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "my-ng": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
